Fix z-index on final label.

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -3045,6 +3045,7 @@ li.revisions {
         position: relative;
 
         .text {
+            z-index: 1;
             position: absolute;
             border: 0;
             margin: 0;
